--- a/nextjs/checkout/package.json
+++ b/nextjs/checkout/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "rm -rf .next && next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "3.5.0",
+    "@module-federation/nextjs-mf": "^4.0.2",
     "lodash": "4.17.21",
     "next": "12.1.6",
     "next-compose-plugins": "^2.2.1",
