--- a/bi-directional/app1/package.json
+++ b/bi-directional/app1/package.json
@@ -3,19 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
-    "@babel/core": "7.17.10",
-    "@babel/preset-react": "7.16.7",
-    "babel-loader": "8.2.5",
+    "@webpack-cli/serve": "^1.7.0",
+    "@babel/core": "7.16.5",
+    "@babel/preset-react": "7.16.5",
+    "babel-loader": "8.2.3",
     "html-webpack-plugin": "5.5.0",
-    "serve": "13.0.2",
-    "webpack": "5.72.1",
-    "webpack-cli": "4.9.2",
-    "webpack-dev-server": "4.8.1"
+    "serve": "12.0.1",
+    "webpack": "5.61.0",
+    "webpack-cli": "4.8.0",
+    "webpack-dev-server": "4.2.1"
   },
   "scripts": {
-    "start": "webpack-cli serve",
-    "build": "webpack --mode production",
-    "serve": "serve dist -p 3001",
+    "start": "node_modules/.bin/webpack-cli serve",
+    "build": "node_modules/.bin/webpack --mode production",
+    "serve": "node_modules/.bin/serve dist -p 3001",
     "clean": "rm -rf dist"
   },
   "dependencies": {
