--- a/bi-directional/package.json
+++ b/bi-directional/package.json
@@ -1,12 +1,18 @@
 {
   "private": true,
   "scripts": {
-    "start": "lerna run --scope @bi-directional/* --parallel start",
-    "build": "lerna run --scope @bi-directional/* build",
-    "serve": "lerna run --scope @bi-directional/* --parallel serve",
-    "clean": "lerna run --scope @bi-directional/* --parallel clean"
+    "start": "yarn build && yarn serve",
+    "build": "concurrently \"cd app1; yarn build\" \"cd app2; yarn build\"",
+    "serve": "concurrently \"cd app1; yarn serve\" \"cd app2; yarn serve\"",
+    "clean": "concurrently \"cd app1; yarn clean\" \"cd app2; yarn clean\""
   },
   "devDependencies": {
-    "lerna": "3.22.1"
+    "@webpack-cli/serve": "^1.7.0"
+  },
+  "workspaces": {
+    "packages": [
+      "./app1",
+      "./app2"
+    ]
   }
 }
