--- a/bi-directional/app2/package.json
+++ b/bi-directional/app2/package.json
@@ -13,9 +13,9 @@
     "webpack-dev-server": "4.9.3"
   },
   "scripts": {
-    "start": "webpack-cli serve",
-    "build": "webpack --mode production",
-    "serve": "serve dist -p 3002",
+    "start": "node_modules/.bin/webpack-cli serve",
+    "build": "node_modules/.bin/webpack --mode production",
+    "serve": "node_modules/.bin/serve dist -p 3002",
     "clean": "rm -rf dist"
   },
   "dependencies": {
