--- a/nextjs-react/remote-app/package.json
+++ b/nextjs-react/remote-app/package.json
@@ -19,6 +19,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@stitches/react": "^1.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
