docs: update nextjs-react example (#2163)

--- a/nextjs-react/host-app/package.json
+++ b/nextjs-react/host-app/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "^4.1.0",
+    "@module-federation/nextjs-mf": "4.1.0",
+    "@stitches/react": "^1.2.8",
     "next": "12.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
