refactor(nextjs): change app ports for better understanding (home - 3000, shop - 3001, checkout - 3002)

--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -7,9 +7,9 @@
     "./shop"
   ],
   "scripts": {
-    "start": "concurrently \"cd checkout; npm run dev\" \"cd home; npm run dev\" \"cd shop; npm run dev\"",
-    "build": "concurrently \"cd checkout; npm run build\" \"cd home; npm run build\" \"cd shop; npm run build\"",
-    "serve": "concurrently \"cd checkout; npm run start\" \"cd home; npm run start\" \"cd shop; npm run start\""
+    "start": "concurrently \"cd home; npm run dev\" \"cd shop; npm run dev\" \"cd checkout; npm run dev\"",
+    "build": "concurrently \"cd home; npm run build\" \"cd shop; npm run build\" \"cd checkout; npm run build\"",
+    "serve": "concurrently \"cd home; npm run start\" \"cd shop; npm run start\" \"cd checkout; npm run start\""
   },
   "dependencies": {
     "concurrently": "^7.0.0"
