--- a/nextjs/checkout/package.json
+++ b/nextjs/checkout/package.json
@@ -8,11 +8,14 @@
     "start": "next start -p 3002"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@mantine/core": "^5.0.2",
+    "@mantine/hooks": "^5.0.2",
     "@module-federation/nextjs-mf": "^5.0.1",
     "lodash": "4.17.21",
     "next": "12.2.2",
     "next-compose-plugins": "^2.2.1",
-    "nextjs-shared": "*",
+    "nextjs-shared": "link:../shared",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "webpack": "5.72.1",
