--- a/nextjs/shop/package.json
+++ b/nextjs/shop/package.json
@@ -8,10 +8,8 @@
     "start": "next start -p 3001"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@mantine/core": "^5.0.2",
-    "@mantine/hooks": "^5.0.2",
-    "@module-federation/nextjs-mf": "^5.0.1",
+    "@module-federation/nextjs-mf": "^5.0.4",
+    "antd": "^4.22.3",
     "lodash": "4.17.21",
     "next": "12.2.2",
     "next-compose-plugins": "^2.2.1",
