--- a/native-federation-react/app2/package.json
+++ b/native-federation-react/app2/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@softarc/native-federation": "^0.9.2-beta.5",
     "@types/node": "14.14.35",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.2",
