update typescript example to strteam typescript

--- a/typescript/app1/package.json
+++ b/typescript/app1/package.json
@@ -23,6 +23,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@module-federation/typescript": "^0.1.8",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
   }
