update readme and contributors

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Examples showcasing Webpack 5's Module Federation",
   "repository": "https://github.com/module-federation/module-federation-examples.git",
   "author": "Zack Jackson <zackary.l.jackson@gmail.com> (https://github.com/ScriptedAlchemy)",
+  "contributors": [
+    "Prasanna Mestha <prasanna@privjs.com> (https://github.com/prasannamestha)"
+  ],
   "license": "MIT",
   "private": true,
   "workspaces": {
