--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
       "./bi-directional/*",
       "./startup-code/*",
       "./different-react-versions/*",
+      "./native-federation-react/*",
       "./self-healing/*",
       "./react-hmr/*",
       "./comprehensive-demo/*",
