dont hoist types. screw typescript

--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
       "./genesis/*"
     ],
     "nohoist": [
+      "**/@types",
+      "**/@types/**",
       "**/svelte",
       "**/svelte/**",
       "**/svelte-loader",
