--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
       "./bi-directional/*",
       "./startup-code/*",
       "./different-react-versions/*",
+      "./native-federation-react/*",
       "./self-healing/*",
       "./react-hmr/*",
       "./comprehensive-demo/*",
@@ -41,6 +42,8 @@
       "./genesis/*"
     ],
     "nohoist": [
+      "**/@types",
+      "**/@types/**",
       "**/svelte",
       "**/svelte/**",
       "**/svelte-loader",
