Bundler Agnostic Module Federation (#2227)
* fixing some bugs

* update

* adding native federation example

* fixing some bugs

* update

* adding native federation example

* Native federation react (#2228)

* adding react esbuild example

* adding react esbuild example

* adding react esbuild example

* adding react esbuild example

* adding native federation react example

* adding native federation react example

* dont hoist types. screw typescript

* update readme

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "./bi-directional/*",
       "./startup-code/*",
       "./different-react-versions/*",
+      "./native-federation-react/*",
       "./self-healing/*",
       "./react-hmr/*",
       "./comprehensive-demo/*",
@@ -44,6 +45,8 @@
       "./genesis/*"
     ],
     "nohoist": [
+      "**/@types",
+      "**/@types/**",
       "**/svelte",
       "**/svelte/**",
       "**/svelte-loader",
@@ -66,6 +69,7 @@
     "submodules": "git pull --recurse-submodules",
     "prettier": "prettier --write \"**/*.{js,jsx,json,md,ts,tsx}\"",
     "prettier:check": "prettier --list-different \"**/*.{js,jsx,json,md,ts,tsx}\"",
-    "test": "jest test/index.spec.js --maxWorkers=2"
+    "test": "jest test/index.spec.js --maxWorkers=2",
+    "postinstall": "git pull --recurse-submodules"
   }
 }
