--- a/css-isolation/app1/package.json
+++ b/css-isolation/app1/package.json
@@ -7,8 +7,10 @@
     "@babel/preset-react": "7.16.7",
     "babel-loader": "8.2.3",
     "bundle-loader": "0.5.6",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "5.5.0",
     "serve": "12.0.1",
+    "style-loader": "^3.3.1",
     "webpack": "5.61.0",
     "webpack-cli": "4.8.0",
     "webpack-dev-server": "4.2.1"
