--- a/native-federation-react/package.json
+++ b/native-federation-react/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^18.7.13",
     "concurrently": "^7.3.0",
     "esbuild": "^0.15.5",
+    "esm-node-services": "^0.7.4",
     "json5": "^2.2.1",
     "serve": "^14.0.1"
   },
