--- a/nextjs-react/host-app/package.json
+++ b/nextjs-react/host-app/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "^5.1.2",
+    "@module-federation/nextjs-mf": "^5.3.3",
     "@stitches/react": "^1.2.8",
     "next": "12.2.2",
     "react": "17.0.2",
@@ -17,6 +17,9 @@
   },
   "devDependencies": {
     "eslint": "8.10.0",
-    "eslint-config-next": "12.2.2"
+    "eslint-config-next": "12.2.2",
+    "webpack": "5.73.0",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "4.9.3"
   }
 }
