--- a/nextjs/home/package.json
+++ b/nextjs/home/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "nextjs-shared": "*",
-    "@module-federation/nextjs-mf": "^5.1.2",
+    "@module-federation/nextjs-mf": "5.5.0",
     "lodash": "4.17.21",
     "next": "12.2.2",
     "next-compose-plugins": "^2.2.1",
