--- a/nextjs/checkout/package.json
+++ b/nextjs/checkout/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "^5.1.2",
+    "@module-federation/nextjs-mf": "5.5.0",
     "lodash": "4.17.21",
     "next": "12.2.2",
     "next-compose-plugins": "^2.2.1",
