feat: added typescript monorepo exampleusing yarn workspaces and typesVerssions

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
       "./vue2-in-vue3/*",
       "./vue3-demo/*",
       "./vue-cli/*",
-      "./genesis/*"
+      "./genesis/*",
+      "./typescript-monorepo/*"
     ],
     "nohoist": [
       "**/@types",
