--- a/nextjs-antd/package.json
+++ b/nextjs-antd/package.json
@@ -16,5 +16,10 @@
   "dependencies": {
     "concurrently": "^7.0.0",
     "cpx": "1.5.0"
+  },
+  "resolutions": {
+    "@module-federation/nextjs-mf": "./module-federation-nextjs-mf-v5.5.3",
+    "@module-federation/node": "./module-federation-node-v0.0.3.tgz",
+    "@module-federation/utilities": "./module-federation-utilities-v0.0.2.tgz"
   }
 }
