Add node-fetch dep in order to get example working

--- a/server-side-rendering/shell/package.json
+++ b/server-side-rendering/shell/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "node-fetch": "2.6.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.0.0",
