update mf package

--- a/nextjs-ssr/checkout/package.json
+++ b/nextjs-ssr/checkout/package.json
@@ -8,7 +8,7 @@
     "start": "NODE_ENV=production next start"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "https://github.com/module-federation/nextjs-mf.git#fix_nested_remote_imports",
+    "@module-federation/nextjs-mf": "^5.6.2",
     "lodash": "4.17.21",
     "next": "12.2.2",
     "next-compose-plugins": "^2.2.1",
