update mf package

--- a/nextjs-ssr/shared/package.json
+++ b/nextjs-ssr/shared/package.json
@@ -6,6 +6,6 @@
   "types": "./index.d.ts",
   "dependencies": {
     "feather-route-matcher": "^4.0.0",
-    "react": "17.0.2"
+    "react": "^18.2.0"
   }
 }
