push stable package

--- a/nextjs-ssr/home/package.json
+++ b/nextjs-ssr/home/package.json
@@ -8,7 +8,7 @@
     "start": "NODE_ENV=production next start -p 3001"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "5.6.3-8",
+    "@module-federation/nextjs-mf": "5.6.3",
     "lodash": "4.17.21",
     "next": "12.2.2",
     "next-compose-plugins": "^2.2.1",
