--- a/nextjs-ssr/checkout/package.json
+++ b/nextjs-ssr/checkout/package.json
@@ -8,13 +8,13 @@
     "start": "NODE_ENV=production next start"
   },
   "dependencies": {
-    "@module-federation/nextjs-ssr": "https://github.com/module-federation/nextjs-ssr.git#main",
+    "@module-federation/nextjs-mf": "5.8.5",
     "lodash": "4.17.21",
     "next": "12.2.2",
     "next-compose-plugins": "^2.2.1",
     "nextjs-shared": "file:../shared",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "webpack": "5.72.1",
     "webpack-merge": "^5.8.0"
   }
