--- a/medusa-example/nav/package.json
+++ b/medusa-example/nav/package.json
@@ -3,33 +3,33 @@
   "version": "6.1.2",
   "private": true,
   "devDependencies": {
-    "@babel/core": "7.15.5",
-    "@babel/preset-react": "7.14.5",
+    "@babel/core": "7.19.6",
+    "@babel/preset-react": "7.18.6",
     "@module-federation/dashboard-plugin": "2.6.4",
-    "@webpack-cli/serve": "1.5.2",
-    "babel-loader": "8.2.2",
-    "css-loader": "5.2.7",
-    "html-webpack-plugin": "5.3.2",
+    "@webpack-cli/serve": "1.7.0",
+    "babel-loader": "9.0.1",
+    "css-loader": "6.7.1",
+    "html-webpack-plugin": "5.5.0",
     "less": "4.1.3",
-    "less-loader": "8.1.1",
-    "serve": "13.0.4",
-    "style-loader": "2.0.0",
-    "webpack": "5.61.0",
-    "webpack-cli": "4.7.2",
-    "webpack-dev-server": "4.9.3"
+    "less-loader": "11.1.0",
+    "serve": "14.0.1",
+    "style-loader": "3.3.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "scripts": {
-    "start": "webpack-cli serve  --liveReload",
+    "start": "webpack-cli serve",
     "build": "webpack --mode production",
     "serve": "serve dist -p 3003",
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.1.0",
-    "@emotion/react": "^11.0.0",
-    "antd": "^4.2.5",
-    "lodash": "^4.17.15",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@ant-design/icons": "^4.7.0",
+    "@emotion/react": "^11.10.5",
+    "antd": "^4.24.0",
+    "lodash": "^4.17.21",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
