--- a/medusa-example/package.json
+++ b/medusa-example/package.json
@@ -2,8 +2,14 @@
   "private": true,
   "scripts": {
     "start": "concurrently \"cd dsl; yarn start\" \"cd home; yarn start\" \"cd nav; yarn start\" \"cd search; yarn start\" \"cd utils; yarn start\"",
+    "stackblitzStart": "cd dsl; yarn build && cd ../home; yarn build && cd ../nav; yarn build && cd ../search; yarn build && cd ../utils; yarn build && yarn serve",
     "build": "concurrently \"cd dsl; yarn build\" \"cd home; yarn build\" \"cd nav; yarn build\" \"cd search; yarn build\" \"cd utils; yarn build\"",
-    "serve": "concurrently \"cd dsl; yarn serve\" \"cd home; yarn serve\" \"cd nav; yarn serve\" \"cd search; yarn serve\" \"cd utils; yarn serve\"",
+    "serve": "concurrently \"yarn serve:dsl\" \"yarn serve:home\" \"yarn serve:nav\" \"yarn serve:search\" \"yarn serve:utils\"",
+    "serve:dsl": "cd dsl; yarn serve",
+    "serve:home": "cd home; yarn serve",
+    "serve:nav": "cd nav; yarn serve",
+    "serve:search": "cd search; yarn serve",
+    "serve:utils": "cd utils; yarn serve",
     "clean": "lerna run --scope @dashboard/* --parallel clean"
   },
   "workspaces": {
@@ -16,6 +22,6 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "6.2.1"
+    "concurrently": "7.5.0"
   }
 }
