--- a/medusa-example/utils/package.json
+++ b/medusa-example/utils/package.json
@@ -3,18 +3,18 @@
   "version": "0.0.3",
   "private": true,
   "devDependencies": {
-    "@babel/core": "7.15.5",
-    "@babel/preset-react": "7.14.5",
+    "@babel/core": "7.19.6",
+    "@babel/preset-react": "7.18.6",
     "@module-federation/dashboard-plugin": "2.6.4",
-    "@webpack-cli/serve": "1.5.2",
-    "babel-loader": "8.2.2",
-    "serve": "13.0.4",
-    "webpack": "5.61.0",
-    "webpack-cli": "4.7.2",
-    "webpack-dev-server": "4.9.3"
+    "@webpack-cli/serve": "1.7.0",
+    "babel-loader": "9.0.1",
+    "serve": "14.0.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "scripts": {
-    "start": "webpack-cli serve  --liveReload",
+    "start": "webpack-cli serve",
     "build": "webpack --mode production",
     "serve": "serve dist -p 3005",
     "clean": "rm -rf dist"
