--- a/react-nested-routers/shell/package.json
+++ b/react-nested-routers/shell/package.json
@@ -14,24 +14,24 @@
     "email": "jherr@pobox.com"
   },
   "devDependencies": {
-    "@babel/core": "7.18.9",
-    "@babel/plugin-transform-runtime": "7.18.9",
-    "@babel/preset-env": "7.18.9",
-    "@babel/preset-react": "7.18.6",
-    "@babel/preset-typescript": "7.18.6",
-    "@types/react": "18.0.19",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "10.4.12",
-    "babel-loader": "8.2.5",
-    "css-loader": "6.7.1",
-    "html-webpack-plugin": "5.5.0",
-    "postcss": "8.4.16",
-    "postcss-loader": "4.3.0",
-    "style-loader": "3.3.1",
-    "typescript": "4.7.3",
-    "webpack": "5.73.0",
-    "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.9.3"
+    "@babel/core": "^7.15.8",
+    "@babel/plugin-transform-runtime": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/react": "^18.0.13",
+    "@types/react-dom": "^18.0.5",
+    "autoprefixer": "^10.1.0",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.3.0",
+    "html-webpack-plugin": "^5.3.2",
+    "postcss": "^8.2.1",
+    "postcss-loader": "^4.1.0",
+    "style-loader": "^3.3.0",
+    "typescript": "^4.5.2",
+    "webpack": "^5.57.1",
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
     "react": "^18.2.0",
