chore: add different-react-versions-typescript to package list

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "./bi-directional/*",
       "./startup-code/*",
       "./different-react-versions/*",
+      "./different-react-versions-typescript/*",
       "./native-federation-react/*",
       "./self-healing/*",
       "./react-hmr/*",
