angular14-react: fix P42.ai  detections

--- a/angular14-react/angular-profile/angular.json
+++ b/angular14-react/angular-profile/angular.json
@@ -30,9 +30,7 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [
-              "src/assets/test.js"
-            ],
+            "scripts": [],
             "customWebpackConfig": {
               "path": "webpack.config.ts",
               "replaceDuplicatePlugins": true
