feat(medusa): adding env definition for the remote url from medusa

--- a/medusa-example/.env
+++ b/medusa-example/.env
@@ -1,3 +1,4 @@
-DASHBOARD_WRITE_TOKEN=ID
-DASHBOARD_READ_TOKEN=ID
-DASHBOARD_BASE_URL=https://api.medusa.codes
+DASHBOARD_WRITE_TOKEN=40ed8000-cb87-47ee-b9ca-f7b859870b63
+DASHBOARD_READ_TOKEN=c04b4481-b613-43c5-96c4-b78a14c115d9
+DASHBOARD_BASE_URL=http://localhost:3333
+DASHBOARD_ENVIRONMENT=pusha
