Implemented Cypress & Add firs test

--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,7 @@ buildServer
 
 # descendant prettier configuration
 /**/*/.prettierrc
+
+#Cypress folders
+cypress/videos/**
+cypress/downloads/**
