--- a/package.json
+++ b/package.json
@@ -55,14 +55,16 @@
     ]
   },
   "devDependencies": {
+    "@vue/compiler-sfc": "3.2.37",
     "concurrently": "7.3.0",
     "cross-spawn": "7.0.3",
+    "cypress": "10",
     "husky": "7.0.4",
     "jest": "26.6.3",
     "lerna": "3.22.1",
+    "mocha": "^10.1.0",
     "prettier": "2.7.1",
-    "pretty-quick": "3.1.3",
-    "@vue/compiler-sfc": "3.2.37"
+    "pretty-quick": "3.1.3"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap --ignore-scripts",
@@ -71,6 +73,8 @@
     "prettier": "prettier --write \"**/*.{js,jsx,json,md,ts,tsx}\"",
     "prettier:check": "prettier --list-different \"**/*.{js,jsx,json,md,ts,tsx}\"",
     "test": "jest test/index.spec.js --maxWorkers=2",
-    "postinstall": "git pull --recurse-submodules"
+    "postinstall": "git pull --recurse-submodules",
+    "cypress:debug": "cypress open --config-file cypress/config/cypress.config.ts --browser=chrome",
+    "cypress:run": "cypress run --config-file cypress/config/cypress.config.ts --browser=chrome"
   }
 }
