--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "prettier:check": "prettier --list-different \"**/*.{js,jsx,json,md,ts,tsx}\"",
     "test": "jest test/index.spec.js --maxWorkers=2",
     "postinstall": "git pull --recurse-submodules",
-    "cypress:debug": "cypress open --config-file cypress/config/cypress.config.ts --browser=chrome",
+    "cypress:debug": "cypress open --e2e --config-file cypress/config/cypress.config.ts --browser=chrome",
     "cypress:run": "cypress run --config-file cypress/config/cypress.config.ts --browser=chrome"
   }
 }
