Added e2e for advanced-api/dynamic-remotes-synchronous-imports sample + updated some dependencies

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
       "./redux-reducer-injection/*",
       "./angular-universal-ssr/*",
       "./advanced-api/dynamic-remotes/*",
+      "./advanced-api/dynamic-remotes-synchronous-imports/*",
       "./advanced-api/automatic-vendor-sharing/*",
       "./nextjs-bi-directional/*",
       "./vue2-in-vue3/*",
@@ -61,7 +62,7 @@
     "cypress": "10",
     "husky": "7.0.4",
     "jest": "26.6.3",
-    "lerna": "3.22.1",
+    "lerna": "^3.22.1",
     "mocha": "^10.1.0",
     "prettier": "2.7.1",
     "pretty-quick": "3.1.3"
