--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "concurrently": "7.3.0",
     "cross-spawn": "7.0.3",
     "cypress": "10",
+    "cypress-fill-command": "^1.0.2",
     "husky": "7.0.4",
     "jest": "26.6.3",
     "lerna": "^3.22.1",
