chore: add name property to package.json files

--- a/advanced-api/dynamic-remotes-synchronous-imports/package.json
+++ b/advanced-api/dynamic-remotes-synchronous-imports/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "dynamic-remotes-synchronous-imports",
   "private": true,
   "scripts": {
     "start": "lerna run --scope @dynamic-remotes-synchronous-imports/* --parallel start",
