--- a/comprehensive-demo/package.json
+++ b/comprehensive-demo/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "comprehensive-demo",
   "private": true,
   "scripts": {
     "start": "concurrently \"lerna run --scope @comprehensive-demo/* --parallel start\" \"yarn serve\"",
