--- a/dynamic-system-host/package.json
+++ b/dynamic-system-host/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "dynamic-system-host",
   "private": true,
   "scripts": {
     "start": "lerna run --scope @dynamic-system-host/* --parallel start",
