--- a/genesis/package.json
+++ b/genesis/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "genesis",
   "private": true,
   "scripts": {
     "dev": "concurrently --raw \"lerna run --scope=ssr-mf-about dev\" \"lerna run --scope=ssr-mf-home dev\"",
