--- a/medusa-example/package.json
+++ b/medusa-example/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "medusa-example",
   "private": true,
   "scripts": {
     "start": "concurrently \"cd dsl; yarn start\" \"cd home; yarn start\" \"cd nav; yarn start\" \"cd search; yarn start\" \"cd utils; yarn start\"",
