--- a/redux-reducer-injection/package.json
+++ b/redux-reducer-injection/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "redux-reducer-injection",
   "private": true,
   "scripts": {
     "start": "concurrently \"lerna run --scope @redux-reducer-injection/* --parallel start\" \"yarn serve\"",
