--- a/self-healing/package.json
+++ b/self-healing/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "self-healing",
   "private": true,
   "scripts": {
     "start": "lerna run --scope @self-healing/* --parallel start",
