--- a/shared-context/package.json
+++ b/shared-context/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "shared-context",
   "private": true,
   "scripts": {
     "start": "lerna run --scope @shared-context/* --parallel start",
