--- a/shared-routes2/package.json
+++ b/shared-routes2/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "shared-routes2",
   "private": true,
   "scripts": {
     "start": "lerna run --scope @shared-routes2/* --parallel start",
