--- a/startup-code/package.json
+++ b/startup-code/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "startup-code",
   "private": true,
   "scripts": {
     "start": "echo \"Dev server currently has bugs with entrypoint ordering. Use 'yarn build && yarn serve' instead.\"",
