--- a/vue2-in-vue3/package.json
+++ b/vue2-in-vue3/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "vue2-in-vue3",
   "private": true,
   "scripts": {
     "start": "lerna run --scope @vue2-in-vue3/* --parallel start",
