--- a/advanced-api/automatic-vendor-sharing/package.json
+++ b/advanced-api/automatic-vendor-sharing/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "automatic-vendor-sharing",
   "private": true,
   "scripts": {
     "start": "lerna run --scope @automatic-vendor-sharing/* --parallel start",
