--- a/advanced-api/dynamic-remotes/package.json
+++ b/advanced-api/dynamic-remotes/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "dynamic-remotes",
   "private": true,
   "scripts": {
     "start": "lerna run --scope @dynamic-remotes/* --parallel start",
