--- a/shared-routing/package.json
+++ b/shared-routing/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "shared-routing",
   "private": true,
   "scripts": {
     "start": "lerna run --scope @shared-routing/* --parallel start",
