--- a/streamed-federation/package.json
+++ b/streamed-federation/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "streamed-federation",
   "private": true,
   "scripts": {
     "start": "lerna run --scope @streamed-federation/* --parallel start",
