--- a/typescript-project-references/package.json
+++ b/typescript-project-references/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "typescript-project-references",
   "private": true,
   "scripts": {
     "start": "lerna run --scope @typescript-project-references/* --parallel start",
