--- a/version-discrepancy/package.json
+++ b/version-discrepancy/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "version-discrepancy",
   "private": true,
   "scripts": {
     "start": "lerna run --scope @version-discrepancy/* --parallel start",
