chore: update the list of workpace packages

--- a/package.json
+++ b/package.json
@@ -11,40 +11,68 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "./basic-host-remote/*",
-      "./third-party-scripts/*",
-      "./bi-directional/*",
-      "./startup-code/*",
-      "./different-react-versions/*",
-      "./native-federation-react/*",
-      "./self-healing/*",
-      "./react-hmr/*",
-      "./comprehensive-demo/*",
-      "./server-side-rendering/*",
-      "./server-side-render-only/*",
-      "./dynamic-system-host/*",
-      "./shared-context/*",
-      "./shared-routing/*",
-      "./shared-routes2/*",
-      "./shared-store-cross-framework/*",
-      "./typescript/*",
-      "./typescript-project-references/*",
-      "./nested/*",
-      "./nextjs-sidecar/*",
-      "./version-discrepancy/*",
-      "./dashboard-example/*",
-      "./react-in-vue/*",
-      "./redux-reducer-injection/*",
+      "./advanced-api/*",
       "./angular-universal-ssr/*",
-      "./advanced-api/dynamic-remotes/*",
-      "./advanced-api/dynamic-remotes-synchronous-imports/*",
-      "./advanced-api/automatic-vendor-sharing/*",
-      "./nextjs-bi-directional/*",
-      "./vue2-in-vue3/*",
-      "./vue3-demo/*",
-      "./vue-cli/*",
+      "./angular11-microfrontends-ngrx/*",
+      "./angular11-microfrontends-ngxs/*",
+      "./angular11-microfrontends-scully/*",
+      "./angular12-microfrontends/*",
+      "./angular13-microfrontends-lazy-components/*",
+      "./angular14-react/*",
+      "./basic-host-remote/*",
+      "./bi-directional/*",
+      "./complete-react-case/*",
+      "./comprehensive-demo/*",
+      "./cra/*",
+      "./css-isolation/*",
+      "./cypress/*",
+      "./delegate-modules/*",
+      "./different-react-versions/*",
+      "./different-react-versions-isolated/*",
+      "./docs/*",
+      "./dynamic-system-host/*",
       "./genesis/*",
-      "./typescript-monorepo/*"
+      "./i18next-nextjs-react/*",
+      "./medusa-delegate-example/*",
+      "./medusa-example/*",
+      "./multi-threaded-ssr/*",
+      "./native-federation-core-microfrontend/*",
+      "./native-federation-react/*",
+      "./nested/*",
+      "./nextjs/*",
+      "./nextjs-antd/*",
+      "./nextjs-react/*",
+      "./nextjs-ssr/*",
+      "./node_modules/*",
+      "./quasar-cli-vue3-webpack-javascript/*",
+      "./react-hmr/*",
+      "./react-in-vue/*",
+      "./react-nested-routers/*",
+      "./react-nextjs/*",
+      "./redux-reducer-injection/*",
+      "./rollup-federation-demo/*",
+      "./rust-wasm/*",
+      "./self-healing/*",
+      "./server-side-render-only/*",
+      "./server-side-rendering/*",
+      "./shared-context/*",
+      "./shared-routes2/*",
+      "./shared-routing/*",
+      "./shared-store-cross-framework/*",
+      "./startup-code/*",
+      "./streamed-federation/*",
+      "./test/*",
+      "./third-party-scripts/*",
+      "./typescript/*",
+      "./typescript-monorepo/*",
+      "./typescript-project-references/*",
+      "./version-discrepancy/*",
+      "./vite-react-simple/*",
+      "./vue-cli/*",
+      "./vue2-in-vue3/*",
+      "./vue3-cli-demo/*",
+      "./vue3-demo/*",
+      "./vue3-demo-federation-with-vite/*"
     ],
     "nohoist": [
       "**/@types",
