--- a/advanced-api/dynamic-remotes-runtime-environment-variables/host/package.json
+++ b/advanced-api/dynamic-remotes-runtime-environment-variables/host/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mf-env/remote",
+  "name": "@dynamic-remotes-runtime-environment-variables/host",
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
@@ -14,7 +14,7 @@
     "webpack-dev-server": "4.9.3"
   },
   "scripts": {
-    "start": "chmod +x ./env.sh && ./env.sh && cp env-config.json ./public/ && webpack-cli serve",
+    "start": "chmod +x ./env.sh && cp env-config.json ./public/ && webpack-cli serve",
     "build": "webpack --mode production",
     "serve": "serve dist -p 3001",
     "clean": "rm -rf dist",
