--- a/advanced-api/dynamic-remotes-runtime-environment-variables/package.json
+++ b/advanced-api/dynamic-remotes-runtime-environment-variables/package.json
@@ -1,16 +1,18 @@
 {
+  "name": "@advanced-api/dynamic-remotes-runtime-environment-variables",
   "private": true,
   "scripts": {
-    "start": "lerna run --scope @mf-env/* --parallel start",
-    "build": "lerna run --scope @mf-env/* build",
-    "serve": "lerna run --scope @mf-env/* --parallel serve",
-    "clean": "lerna run --scope @mf-env/* --parallel clean",
-    "docker:build": "lerna run --scope @mf-env/* --parallel docker:build",
-    "docker:run": "lerna run --scope @mf-env/* --parallel docker:run",
-    "docker:rm": "lerna run --scope @mf-env/* --parallel docker:rm"
+    "start": "lerna run --scope @dynamic-remotes-runtime-environment-variables/* --parallel start",
+    "build": "lerna run --scope @dynamic-remotes-runtime-environment-variables/* build",
+    "serve": "lerna run --scope @dynamic-remotes-runtime-environment-variables/* --parallel serve",
+    "clean": "lerna run --scope @dynamic-remotes-runtime-environment-variables/* --parallel clean",
+    "docker:build": "lerna run --scope @dynamic-remotes-runtime-environment-variables/* --parallel docker:build",
+    "docker:run": "lerna run --scope @dynamic-remotes-runtime-environment-variables/* --parallel docker:run",
+    "docker:rm": "lerna run --scope @dynamic-remotes-runtime-environment-variables/* --parallel docker:rm"
   },
   "devDependencies": {
-    "lerna": "4.0.0"
-  },
-  "name": "mf-env"
+    "copy-webpack-plugin": "^11.0.0",
+    "lerna": "4.0.0",
+    "webpack-cli": "4.10.0"
+  }
 }
