Add changes to package.json for better lerna start

--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
       "./angular-universal-ssr/*",
       "./advanced-api/dynamic-remotes/*",
       "./advanced-api/dynamic-remotes-synchronous-imports/*",
+      "./advanced-api/dynamic-remotes-runtime-environment-variables/",
+      "./advanced-api/dynamic-remotes-runtime-environment-variables/*",
       "./advanced-api/automatic-vendor-sharing/*",
       "./nextjs-bi-directional/*",
       "./vue2-in-vue3/*",
