--- a/advanced-api/dynamic-remotes-runtime-environment-variables/package.json
+++ b/advanced-api/dynamic-remotes-runtime-environment-variables/package.json
@@ -11,7 +11,7 @@
     "docker:rm": "lerna run --scope @dynamic-remotes-runtime-environment-variables/* --parallel docker:rm"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^11.0.0",
+    "copy-webpack-plugin": "11.0.0",
     "lerna": "4.0.0",
     "webpack-cli": "4.10.0"
   }
