--- a/advanced-api/dynamic-remotes/package.json
+++ b/advanced-api/dynamic-remotes/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@advanced-api/dynamic-remotes",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": false,
   "scripts": {
     "start": "lerna run --scope @dynamic-remotes/* --parallel start",
@@ -10,5 +10,6 @@
   },
   "devDependencies": {
     "lerna": "3.22.1"
-  }
+  },
+  "gitHead": "4c168f339d09d85543f33559c19356f93cb0e4c1"
 }
