--- a/angular13-microfrontends-lazy-components/package.json
+++ b/angular13-microfrontends-lazy-components/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start:shell": "ng serve mdmf-shell --live-reload false",
+    "start:shell": "ng serve mdmf-shell",
     "start:profile": "ng serve mdmf-profile",
     "build:shared": "ng build mdmf-shared",
     "build:shell": "ng build mdmf-shell",
