--- a/shared-context/package.json
+++ b/shared-context/package.json
@@ -7,6 +7,7 @@
     "clean": "lerna run --scope @shared-context/* --parallel clean"
   },
   "devDependencies": {
-    "lerna": "3.22.1"
+    "lerna": "3.22.1",
+    "webpack-cli": "^5.0.1"
   }
 }
