fix for react-host-remote sample

--- a/react-nextjs/react-host-remote/remote/package.json
+++ b/react-nextjs/react-host-remote/remote/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "react": "18.0.0",
+    "react-dom": "18.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.18.9",
@@ -15,6 +14,7 @@
     "concurrently": "7.3.0",
     "css-loader": "6.7.1",
     "html-webpack-plugin": "5.5.0",
+    "react-router-dom": "6.5.0",
     "serve": "13.0.4",
     "style-loader": "3.3.1",
     "webpack": "5.72.1",
