--- a/react-nextjs/react-host-remote/host/package.json
+++ b/react-nextjs/react-host-remote/host/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "^5.1.2"
+    "react": "18.0.0",
+    "react-dom": "18.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.18.9",
@@ -14,6 +13,7 @@
     "babel-loader": "8.2.5",
     "concurrently": "7.3.0",
     "html-webpack-plugin": "5.5.0",
+    "react-router-dom": "6.5.0",
     "serve": "13.0.4",
     "webpack": "5.72.1",
     "webpack-cli": "4.9.2"
