--- a/nextjs-react/host-app/package.json
+++ b/nextjs-react/host-app/package.json
@@ -9,17 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "^5.3.3",
+    "@module-federation/nextjs-mf": "^5.12.10",
     "@stitches/react": "^1.2.8",
-    "next": "12.2.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^13.0.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "eslint": "8.10.0",
-    "eslint-config-next": "12.2.2",
-    "webpack": "5.73.0",
-    "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.9.3"
+    "eslint": "^8.30.0",
+    "eslint-config-next": "^13.0.7",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
