--- a/nextjs-react/package.json
+++ b/nextjs-react/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "install:apps": "concurrently \"cd host-app; yarn\" \"cd remote-app; yarn\"",
-    "start": "concurrently \"cd remote-app; npm start\" \"cd host-app; npm run dev\""
+    "install:apps": "concurrently \"yarn --cwd host-app\" \"yarn --cwd remote-app\"",
+    "start": "concurrently \"yarn --cwd remote-app start\" \"yarn --cwd host-app dev\""
   },
   "keywords": [],
   "author": "rahulteja-dev",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^7.0.0"
+    "concurrently": "^7.6.0"
   }
 }
