--- a/advanced-api/dynamic-remotes/package.json
+++ b/advanced-api/dynamic-remotes/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "@advanced-api/dynamic-remotes",
+  "name": "dynamic-remotes",
   "version": "0.0.1",
   "private": false,
   "scripts": {
-    "start": "lerna run --scope @dynamic-remotes/* --parallel start",
-    "build": "lerna run --scope @dynamic-remotes/* build",
-    "serve": "lerna run --scope @dynamic-remotes/* --parallel serve",
-    "clean": "lerna run --scope @dynamic-remotes/* --parallel clean"
+    "start": "lerna run --scope=dynamic-remotes_app* --parallel start",
+    "build": "lerna run --scope=dynamic-remotes_app* build",
+    "serve": "lerna run --scope=dynamic-remotes_app* --parallel serve",
+    "clean": "lerna run --scope=dynamic-remotes_app* --parallel clean",
+    "e2e:ci": "echo 'Run tests'"
+    
   },
   "devDependencies": {
     "lerna": "3.22.1"
+  },
+  "dependencies": {
+    "dynamic-remotes_app1": "*",
+    "dynamic-remotes_app2": "*",
+    "dynamic-remotes_app3": "*"
   },
   "gitHead": "4c168f339d09d85543f33559c19356f93cb0e4c1"
 }
