--- a/lerna.json
+++ b/lerna.json
@@ -3,9 +3,9 @@
   "npmClient": "yarn",
   "useWorkspaces": true,
   "packages": [
-    "./advanced-api/automatic-vendor-sharing",
-    "./advanced-api/automatic-vendor-sharing/*",
-    "./advanced-api/dynamic-remotes",
-    "./advanced-api/dynamic-remotes/*"
+    "./*/automatic-vendor-sharing",
+    "./*/automatic-vendor-sharing/*",
+    "./*/dynamic-remotes",
+    "./*/dynamic-remotes/*"
   ]
 }
