--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "./advanced-api/automatic-vendor-sharing",
-      "./advanced-api/automatic-vendor-sharing/*",
-      "./advanced-api/dynamic-remotes",
-      "./advanced-api/dynamic-remotes/*"
+      "./*/automatic-vendor-sharing",
+      "./*/automatic-vendor-sharing/*",
+      "./*/dynamic-remotes",
+      "./*/dynamic-remotes/*"
     ],
     "nohoist": [
       "**/@types",
