--- a/advanced-api/automatic-vendor-sharing/app2/package.json
+++ b/advanced-api/automatic-vendor-sharing/app2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@automatic-vendor-sharing/app2",
+  "name": "automatic-vendor-sharing_app2",
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
