Cypress change test

--- a/advanced-api/automatic-vendor-sharing/package.json
+++ b/advanced-api/automatic-vendor-sharing/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "automatic-vendor-sharing_app1": "*",
-    "automatic-vendor-sharing_app2": "*"
+    "automatic-vendor-sharing_app2": "*",
+    "cypress_tests": "*"
   },
   "gitHead": "4c168f339d09d85543f33559c19356f93cb0e4c1"
 }
