--- a/advanced-api/dynamic-remotes/package.json
+++ b/advanced-api/dynamic-remotes/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "dynamic-remotes_app1": "*",
     "dynamic-remotes_app2": "*",
-    "dynamic-remotes_app3": "*"
+    "dynamic-remotes_app3": "*",
+    "cypress_tests": "*"
   },
   "gitHead": "4c168f339d09d85543f33559c19356f93cb0e4c1"
 }
