--- a/lerna.json
+++ b/lerna.json
@@ -6,6 +6,7 @@
     "./*/automatic-vendor-sharing",
     "./*/automatic-vendor-sharing/*",
     "./*/dynamic-remotes",
-    "./*/dynamic-remotes/*"
+    "./*/dynamic-remotes/*",
+    "./cypress"
   ]
 }
