--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
       "./*/automatic-vendor-sharing",
       "./*/automatic-vendor-sharing/*",
       "./*/dynamic-remotes",
-      "./*/dynamic-remotes/*"
+      "./*/dynamic-remotes/*",
+      "./cypress"
     ],
     "nohoist": [
       "**/@types",
