--- a/advanced-api/automatic-vendor-sharing/package.json
+++ b/advanced-api/automatic-vendor-sharing/package.json
@@ -12,10 +12,6 @@
   "devDependencies": {
     "lerna": "3.22.1"
   },
-  "dependencies": {
-    "automatic-vendor-sharing_app1": "*",
-    "automatic-vendor-sharing_app2": "*",
-    "cypress_tests": "*"
-  },
+  "dependencies": {},
   "gitHead": "4c168f339d09d85543f33559c19356f93cb0e4c1"
 }
