--- a/advanced-api/dynamic-remotes/package.json
+++ b/advanced-api/dynamic-remotes/package.json
@@ -13,11 +13,6 @@
   "devDependencies": {
     "lerna": "3.22.1"
   },
-  "dependencies": {
-    "dynamic-remotes_app1": "*",
-    "dynamic-remotes_app2": "*",
-    "dynamic-remotes_app3": "*",
-    "cypress_tests": "*"
-  },
+  "dependencies": {},
   "gitHead": "4c168f339d09d85543f33559c19356f93cb0e4c1"
 }
