--- a/advanced-api/automatic-vendor-sharing/package.json
+++ b/advanced-api/automatic-vendor-sharing/package.json
@@ -1,10 +1,11 @@
 {
-  "private": true,
+  "name": "automatic-vendor-sharing",
+  "version": "0.0.0",
   "scripts": {
-    "start": "lerna run --scope @automatic-vendor-sharing/* --parallel start",
-    "build": "lerna run --scope @automatic-vendor-sharing/* build",
-    "serve": "lerna run --scope @automatic-vendor-sharing/* --parallel serve",
-    "clean": "lerna run --scope @automatic-vendor-sharing/* --parallel clean"
+    "start": "lerna run --scope=automatic-vendor-sharing_app* --parallel start",
+    "build": "lerna run --scope=automatic-vendor-sharing_app* --parallel build",
+    "serve": "lerna run --scope=automatic-vendor-sharing_app* --parallel serve",
+    "clean": "lerna run --scope=automatic-vendor-sharing_app* --parallel clean"
   },
   "devDependencies": {
     "lerna": "3.22.1"
