--- a/advanced-api/dynamic-remotes/package.json
+++ b/advanced-api/dynamic-remotes/package.json
@@ -1,10 +1,11 @@
 {
-  "private": true,
+  "name": "dynamic-remotes",
+  "version": "0.0.0",
   "scripts": {
-    "start": "lerna run --scope @dynamic-remotes/* --parallel start",
-    "build": "lerna run --scope @dynamic-remotes/* build",
-    "serve": "lerna run --scope @dynamic-remotes/* --parallel serve",
-    "clean": "lerna run --scope @dynamic-remotes/* --parallel clean"
+    "start": "lerna run --scope=dynamic-remotes_app* --parallel start",
+    "build": "lerna run --scope=dynamic-remotes_app* --parallel build",
+    "serve": "lerna run --scope=dynamic-remotes_app* --parallel serve",
+    "clean": "lerna run --scope=dynamic-remotes_app* --parallel clean"
   },
   "devDependencies": {
     "lerna": "3.22.1"
