--- a/package.json
+++ b/package.json
@@ -11,42 +11,8 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "./basic-host-remote/*",
-      "./third-party-scripts/*",
-      "./bi-directional/*",
-      "./startup-code/*",
-      "./different-react-versions/*",
-      "./native-federation-react/*",
-      "./self-healing/*",
-      "./react-hmr/*",
-      "./comprehensive-demo/*",
-      "./server-side-rendering/*",
-      "./server-side-render-only/*",
-      "./dynamic-system-host/*",
-      "./shared-context/*",
-      "./shared-routing/*",
-      "./shared-routes2/*",
-      "./shared-store-cross-framework/*",
-      "./typescript/*",
-      "./typescript-project-references/*",
-      "./nested/*",
-      "./nextjs-sidecar/*",
-      "./version-discrepancy/*",
-      "./dashboard-example/*",
-      "./react-in-vue/*",
-      "./redux-reducer-injection/*",
-      "./angular-universal-ssr/*",
-      "./advanced-api/dynamic-remotes/*",
-      "./advanced-api/dynamic-remotes-synchronous-imports/*",
-      "./advanced-api/dynamic-remotes-runtime-environment-variables/",
-      "./advanced-api/dynamic-remotes-runtime-environment-variables/*",
-      "./advanced-api/automatic-vendor-sharing/*",
-      "./nextjs-bi-directional/*",
-      "./vue2-in-vue3/*",
-      "./vue3-demo/*",
-      "./vue-cli/*",
-      "./genesis/*",
-      "./typescript-monorepo/*"
+      "./advanced-api/automatic-vendor-sharing",
+      "./advanced-api/automatic-vendor-sharing/*"
     ],
     "nohoist": [
       "**/@types",
@@ -65,10 +31,11 @@
     "cypress-fill-command": "^1.0.2",
     "husky": "7.0.4",
     "jest": "26.6.3",
-    "lerna": "^3.22.1",
+    "lerna": "^6.1.0",
     "mocha": "^10.1.0",
     "prettier": "2.7.1",
-    "pretty-quick": "3.1.3"
+    "pretty-quick": "3.1.3",
+    "wait-on": "7.0.1"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap --ignore-scripts",
