--- a/react-nextjs/react-host-nextjs-remote/remote/package.json
+++ b/react-nextjs/react-host-nextjs-remote/remote/package.json
@@ -15,6 +15,7 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@next/env": "^13.1.0",
     "eslint": "8.14.0",
     "eslint-config-next": "12.2.2"
   }
