--- a/react-nextjs/react-host-nextjs-remote/package.json
+++ b/react-nextjs/react-host-nextjs-remote/package.json
@@ -14,6 +14,7 @@
   "author": "Omher",
   "license": "ISC",
   "devDependencies": {
+    "@next/env": "^13.1.1",
     "concurrently": "7.4.0"
   }
 }
