--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,6 @@ buildServer
 /**/*/.prettierrc
 
 #Cypress folders
-cypress/videos/**
-cypress/downloads/**
-cypress/screenshots/**
+**/cypress/videos/**
+**/cypress/downloads/**
+**/cypress/screenshots/**
