fix(ng14-react): resolve @types/react in ng host app; add style-loader to react MFE

--- a/angular14-react/angular-profile/package.json
+++ b/angular14-react/angular-profile/package.json
@@ -10,7 +10,8 @@
   },
   "private": true,
   "resolutions": {
-    "webpack": "^5.74.0"
+    "webpack": "^5.74.0",
+    "@types/react": "^18.2.0"
   },
   "dependencies": {
     "@angular-builders/custom-webpack": "^14.0.1",
