--- a/angular14-react/react-user-list/package.json
+++ b/angular14-react/react-user-list/package.json
@@ -10,6 +10,7 @@
     "css-loader": "^6.7.1",
     "file-loader": "6.2.0",
     "serve": "13.0.4",
+    "style-loader": "^3.3.1",
     "url-loader": "4.1.1",
     "webpack": "5.74.0",
     "webpack-cli": "4.10.0",
