--- a/nextjs/checkout/package.json
+++ b/nextjs/checkout/package.json
@@ -3,19 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "rm -rf .next && next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "5.5.0",
-    "lodash": "4.17.21",
-    "next": "12.2.2",
-    "next-compose-plugins": "^2.2.1",
-    "nextjs-shared": "*",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "webpack": "5.72.1",
-    "webpack-merge": "^5.8.0"
+    "@module-federation/nextjs-mf": "^6.0.1",
+    "next": "^13.1.1",
+    "nextjs-shared": "file:../shared",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "webpack": "^5.75.0"
   }
 }
