--- a/nextjs/home/package.json
+++ b/nextjs/home/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "rm -rf .next && NODE_OPTIONS='--inspect' next dev -p 3001",
-    "build": "NEXT_TELEMETRY_DISABLED=1 next build",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev -p 3001",
+    "build": "next telemetry disable && next build",
     "start": "next start -p 3001"
   },
   "dependencies": {
-    "nextjs-shared": "*",
-    "@module-federation/nextjs-mf": "5.5.0",
-    "lodash": "4.17.21",
-    "next": "12.2.2",
-    "next-compose-plugins": "^2.2.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "webpack": "5.72.1",
-    "webpack-merge": "^5.8.0"
+    "@module-federation/nextjs-mf": "^6.0.1",
+    "next": "^13.1.1",
+    "nextjs-shared": "file:../shared",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "webpack": "^5.75.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
