--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "cross-spawn": "7.0.3",
     "cypress": "10",
     "cypress-fill-command": "^1.0.2",
+    "cypress-wait-until": "1.7.2",
     "husky": "7.0.4",
     "jest": "26.6.3",
     "lerna": "^3.22.1",
