--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "workspaces": {
     "packages": [
       "./advanced-api/automatic-vendor-sharing",
-      "./advanced-api/automatic-vendor-sharing/*"
+      "./advanced-api/automatic-vendor-sharing/*",
+      "./advanced-api/dynamic-remotes",
+      "./advanced-api/dynamic-remotes/*"
     ],
     "nohoist": [
       "**/@types",
@@ -32,7 +34,7 @@
     "cypress-wait-until": "1.7.2",
     "husky": "7.0.4",
     "jest": "26.6.3",
-    "lerna": "6.3.0",
+    "lerna": "^6.3.0",
     "mocha": "10.1.0",
     "prettier": "2.7.1",
     "pretty-quick": "3.1.3",
