--- a/.github/workflows/cypress-test-pipeline.yml
+++ b/.github/workflows/cypress-test-pipeline.yml
@@ -93,7 +93,8 @@ jobs:
         id: yarn-cache
         with:
           path: |
-            **/node_modules
+            node_modules
+            */*/node_modules
             ~/.cache/Cypress
             ${{ steps.yarn-cache-dir-path.outputs.dir }} 
           key: e2e-yarn-${{ hashFiles('**/yarn.lock') }}
