--- a/vite-react-microfrontends/package.json
+++ b/vite-react-microfrontends/package.json
@@ -10,8 +10,8 @@
 		"serve:remote": "npm --prefix ./remote run dev",
 		"build:host": "npm --prefix ./host run build",
 		"build:remote": "npm --prefix ./remote run build",
-		"preview:host": "npm --prefix ./host run build && npm --prefix ./host run preview",
-		"preview:remote": "npm --prefix ./remote run build && npm --prefix ./remote run preview"
+		"preview:host": "npm --prefix ./host run preview",
+		"preview:remote": "npm --prefix ./remote run preview"
 	},
 	"author": {
 		"name": "Giorgio Boa",
