Add scripts for build & run app in back for CI

--- a/lerna.json
+++ b/lerna.json
@@ -39,6 +39,8 @@
     "./vue3-demo/*",
     "./vue-cli/*",
     "./genesis/*",
-    "./typescript-monorepo/*"
+    "./typescript-monorepo/*",
+    "./angular14-react",
+    "./angular14-react/*"
   ]
 }
