--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
       "./vue3-demo/*",
       "./vue-cli/*",
       "./genesis/*",
-      "./typescript-monorepo/*"
+      "./typescript-monorepo/*",
+      "./angular14-react",
+      "./angular14-react/*"
     ],
     "nohoist": [
       "**/@types",
