--- a/nextjs-v12/package.json
+++ b/nextjs-v12/package.json
@@ -13,5 +13,8 @@
   },
   "dependencies": {
     "concurrently": "^7.0.0"
+  },
+  "devDependencies": {
+    "@module-federation/nextjs-mf": "^6.0.1"
   }
 }
