Add script for build & run tests in back

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
       "./react-hmr/*",
       "./comprehensive-demo-react16/*",
       "./comprehensive-demo-react18/*",
+      "./css-isolation/*",
       "./server-side-rendering/*",
       "./server-side-render-only/*",
       "./dynamic-system-host/*",
